Issue #27336: Fix compilation failures --without-threads